# rim

./: .env  Cargo.toml  README.md  index.html
docs/: index.html
migrations/2020-11-25-132447_products/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs
static/js/: ws.js
templates/: index.html
