[package]
name = "actix-diesel"
version = "0.1.0"
authors = ["d"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = {version = "1.4.5", features = ["sqlite", "r2d2"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
chrono = "0.4.15"
dotenv = "0.15"
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"
actix-files = "0.4.1"
tera = "1.5.0"