[package]
name = "actix-diesel"
version = "0.1.0"
authors = ["d"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
diesel = {version = "1.4.8", features = ["mysql", "postgres", "sqlite", "r2d2"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
chrono = "0.4.19"
dotenv = "0.15"
tera = "1.15.0"