[package]
name = "rust-im"
version = "0.1.0"
authors = ["d"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["ws", "headers"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
chrono = "0.4.19"
dotenv = "0.15"
tera = "1.15.0"
tower-http = { version = "0.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
futures = "0.3"
